fix: Subheader image layout issue on small mobile

--- a/src/features/Home/home.module.styl
+++ b/src/features/Home/home.module.styl
@@ -41,10 +41,11 @@
     h2
       font-size 1.2em
   .img
-    size(450px, 400px)
+    width 450px
     padding-bottom $padding-lg-horizontal
     +$below(md)
-      size(155px, 138px)
+      width 100%
+    
   .copy
     padding: $padding-base-horizontal 0
     +$below(md)
